Added instructions to exercise.

--- a/Optimization_Prompting.ipynb
+++ b/Optimization_Prompting.ipynb
@@ -2,23 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">sk-proj-RD\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "sk-proj-RD\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T06:31:35.599713Z",
+     "start_time": "2025-07-10T06:31:35.303427Z"
     }
-   ],
+   },
    "source": [
     "from openai import OpenAI\n",
     "from rich import print\n",
@@ -35,7 +24,23 @@
     "print(os.environ.get(\"OPENAI_API_KEY\")[:10])\n",
     "\n",
     "client = OpenAI()"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sk-proj-D-\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">sk-proj-D-\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -66,9 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T06:31:38.221830Z",
+     "start_time": "2025-07-10T06:31:38.219397Z"
+    }
+   },
    "source": [
     "def invoke(prompt):\n",
     "    response = client.chat.completions.create(\n",
@@ -76,7 +84,9 @@
     "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
     "    )\n",
     "    return response.choices[0].message.content"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -155,12 +165,12 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "Step \u001b[1;36m1\u001b[0m: Start with the initial number of apples, which is \u001b[1;36m23\u001b[0m.\n",
-       "Step \u001b[1;36m2\u001b[0m: Subtract the number of apples used to make lunch, which is \u001b[1;36m20\u001b[0m. \n",
-       "\u001b[1;36m23\u001b[0m - \u001b[1;36m20\u001b[0m = \u001b[1;36m3\u001b[0m\n",
-       "Step \u001b[1;36m3\u001b[0m: Add the number of apples bought, which is \u001b[1;36m6\u001b[0m.\n",
-       "\u001b[1;36m3\u001b[0m + \u001b[1;36m6\u001b[0m = \u001b[1;36m9\u001b[0m\n",
-       "Answer: The cafeteria now has \u001b[1;36m9\u001b[0m apples.\n"
+       "Step \u001B[1;36m1\u001B[0m: Start with the initial number of apples, which is \u001B[1;36m23\u001B[0m.\n",
+       "Step \u001B[1;36m2\u001B[0m: Subtract the number of apples used to make lunch, which is \u001B[1;36m20\u001B[0m. \n",
+       "\u001B[1;36m23\u001B[0m - \u001B[1;36m20\u001B[0m = \u001B[1;36m3\u001B[0m\n",
+       "Step \u001B[1;36m3\u001B[0m: Add the number of apples bought, which is \u001B[1;36m6\u001B[0m.\n",
+       "\u001B[1;36m3\u001B[0m + \u001B[1;36m6\u001B[0m = \u001B[1;36m9\u001B[0m\n",
+       "Answer: The cafeteria now has \u001B[1;36m9\u001B[0m apples.\n"
       ]
      },
      "metadata": {},
@@ -205,10 +215,10 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[32m\"The Godfather\"\u001b[0m is a cinematic masterpiece that has stood the test of time since its release in \u001b[1;36m1972\u001b[0m. Directed by \n",
+       "\u001B[32m\"The Godfather\"\u001B[0m is a cinematic masterpiece that has stood the test of time since its release in \u001B[1;36m1972\u001B[0m. Directed by \n",
        "Francis Ford Coppola, the film follows the powerful Corleone family as they navigate the treacherous world of \n",
-       "organized crime in 1940s New York. With its stellar cast including Marlon Brando, Al Pacino, and James Caan, \u001b[32m\"The \u001b[0m\n",
-       "\u001b[32mGodfather\"\u001b[0m is a gripping tale of loyalty, betrayal, and the price of power. From its iconic performances to its \n",
+       "organized crime in 1940s New York. With its stellar cast including Marlon Brando, Al Pacino, and James Caan, \u001B[32m\"The \u001B[0m\n",
+       "\u001B[32mGodfather\"\u001B[0m is a gripping tale of loyalty, betrayal, and the price of power. From its iconic performances to its \n",
        "sweeping score and intricate storytelling, this film remains a classic in the world of cinema.\n"
       ]
      },
@@ -329,7 +339,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "I would rate this result a \u001b[1;36m7\u001b[0m out of \u001b[1;36m10\u001b[0m. Having experience with Python, C, HTML, and CSS is a strong set of skills, \n",
+       "I would rate this result a \u001B[1;36m7\u001B[0m out of \u001B[1;36m10\u001B[0m. Having experience with Python, C, HTML, and CSS is a strong set of skills, \n",
        "but there may be room for improvement or expansion in terms of languages or technologies.\n"
       ]
      },
@@ -355,7 +365,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "I would rate this result as a \u001b[1;36m7\u001b[0m - Staff Engineer. The individual shows expertise in various technical areas, leads \n",
+       "I would rate this result as a \u001B[1;36m7\u001B[0m - Staff Engineer. The individual shows expertise in various technical areas, leads \n",
        "high-impact projects, and mentors junior engineers, but may not have the same level of influence or recognition as \n",
        "a Principal Engineer/Architect or higher-ranking roles.\n"
       ]
@@ -410,24 +420,24 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m1\u001b[0m. Innovation and Technology: Tesla is at the forefront of electric vehicle technology and is constantly innovating\n",
+       "\u001B[1;36m1\u001B[0m. Innovation and Technology: Tesla is at the forefront of electric vehicle technology and is constantly innovating\n",
        "and improving its products. Investing in Tesla means investing in cutting-edge technology that is shaping the \n",
        "future of transportation.\n",
        "\n",
-       "\u001b[1;36m2\u001b[0m. Strong Performance: Tesla has consistently shown strong financial performance, with steady revenue growth and \n",
+       "\u001B[1;36m2\u001B[0m. Strong Performance: Tesla has consistently shown strong financial performance, with steady revenue growth and \n",
        "increasing market share in the electric vehicle industry. Its stock price has also experienced significant growth \n",
        "over the years, making it an attractive investment option.\n",
        "\n",
-       "\u001b[1;36m3\u001b[0m. Environmental Benefits: By investing in Tesla, you are supporting a company that is committed to sustainability \n",
+       "\u001B[1;36m3\u001B[0m. Environmental Benefits: By investing in Tesla, you are supporting a company that is committed to sustainability \n",
        "and reducing carbon emissions. Electric vehicles have a lower environmental impact compared to traditional \n",
        "gasoline-powered vehicles, which is becoming increasingly important as the world strives to combat climate change.\n",
        "\n",
-       "\u001b[1;36m4\u001b[0m. Growth Potential: Tesla has ambitious plans for expansion, including the construction of new Gigafactories in \n",
+       "\u001B[1;36m4\u001B[0m. Growth Potential: Tesla has ambitious plans for expansion, including the construction of new Gigafactories in \n",
        "different parts of the world and the development of new products such as electric trucks and self-driving \n",
        "technology. This growth potential can lead to increased revenue and profits in the future, making Tesla a promising\n",
        "long-term investment.\n",
        "\n",
-       "\u001b[1;36m5\u001b[0m. Industry Leader: Tesla is a recognized leader in the electric vehicle market, with a strong brand and loyal \n",
+       "\u001B[1;36m5\u001B[0m. Industry Leader: Tesla is a recognized leader in the electric vehicle market, with a strong brand and loyal \n",
        "customer base. By investing in Tesla, you are investing in a company that is well-positioned to capitalize on the \n",
        "growing demand for electric vehicles and other renewable energy solutions. This makes Tesla a solid investment \n",
        "choice for those looking to make a positive impact on the environment while earning a potentially lucrative return.\n"
@@ -471,23 +481,23 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m1\u001b[0m. High volatility: Tesla stock has been known for its high volatility, which can lead to significant fluctuations \n",
+       "\u001B[1;36m1\u001B[0m. High volatility: Tesla stock has been known for its high volatility, which can lead to significant fluctuations \n",
        "in the price of the stock. This can make it risky for investors, as sudden drops in price can result in substantial\n",
        "losses.\n",
        "\n",
-       "\u001b[1;36m2\u001b[0m. Limited profitability: Tesla has struggled to maintain consistent profitability, with the company reporting \n",
+       "\u001B[1;36m2\u001B[0m. Limited profitability: Tesla has struggled to maintain consistent profitability, with the company reporting \n",
        "losses in several quarters. This lack of profitability can be concerning for investors, as it raises questions \n",
        "about the company's long-term sustainability.\n",
        "\n",
-       "\u001b[1;36m3\u001b[0m. Competition: The electric vehicle market is becoming increasingly crowded, with several major automakers \n",
+       "\u001B[1;36m3\u001B[0m. Competition: The electric vehicle market is becoming increasingly crowded, with several major automakers \n",
        "entering the space. This increased competition could impact Tesla's market share and profitability, as it may \n",
        "struggle to differentiate itself from competitors.\n",
        "\n",
-       "\u001b[1;36m4\u001b[0m. Regulatory risks: Tesla operates in a heavily regulated industry, which subjects it to potential regulatory \n",
+       "\u001B[1;36m4\u001B[0m. Regulatory risks: Tesla operates in a heavily regulated industry, which subjects it to potential regulatory \n",
        "risks. Changes in regulations, such as stricter emissions standards or government incentives for electric vehicles,\n",
        "could impact Tesla's business and financial performance.\n",
        "\n",
-       "\u001b[1;36m5\u001b[0m. Overvaluation: Some analysts argue that Tesla's stock is overvalued, given its high price-to-earnings ratio and \n",
+       "\u001B[1;36m5\u001B[0m. Overvaluation: Some analysts argue that Tesla's stock is overvalued, given its high price-to-earnings ratio and \n",
        "other valuation metrics. An investment in Tesla at its current valuation may not provide a sufficient return for \n",
        "investors, as the stock may be trading at a premium relative to its intrinsic value.\n"
       ]
@@ -499,6 +509,106 @@
    "source": [
     "print(invoke(\"Argue logically in 5 points why not to invest in TESLA\"))"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Guardrails"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T06:31:43.796521Z",
+     "start_time": "2025-07-10T06:31:42.242183Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(invoke(\"What are the most common fruits to eat?\"))",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Some of the most common fruits to eat include:\n",
+       "\n",
+       "\u001B[1;36m1\u001B[0m. Apples\n",
+       "\u001B[1;36m2\u001B[0m. Bananas\n",
+       "\u001B[1;36m3\u001B[0m. Oranges\n",
+       "\u001B[1;36m4\u001B[0m. Grapes\n",
+       "\u001B[1;36m5\u001B[0m. Strawberries\n",
+       "\u001B[1;36m6\u001B[0m. Watermelon\n",
+       "\u001B[1;36m7\u001B[0m. Kiwi\n",
+       "\u001B[1;36m8\u001B[0m. Pineapple\n",
+       "\u001B[1;36m9\u001B[0m. Mango\n",
+       "\u001B[1;36m10\u001B[0m. Blueberries\n",
+       "\n",
+       "These fruits are widely available and popular choices for snacking and incorporating into meals and desserts.\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Some of the most common fruits to eat include:\n",
+       "\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>. Apples\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>. Bananas\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>. Oranges\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>. Grapes\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>. Strawberries\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>. Watermelon\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>. Kiwi\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>. Pineapple\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">9</span>. Mango\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">10</span>. Blueberries\n",
+       "\n",
+       "These fruits are widely available and popular choices for snacking and incorporating into meals and desserts.\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T06:32:21.390672Z",
+     "start_time": "2025-07-10T06:32:19.360119Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(invoke(\"What are the most common fruits to eat? \\\n",
+    "              Don't mention apples\"))\n"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bananas, oranges, grapes, berries, watermelon, pineapple, peaches, pears, cherries, mangoes.\n"
+      ],
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Bananas, oranges, grapes, berries, watermelon, pineapple, peaches, pears, cherries, mangoes.\n",
+       "</pre>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
