--- a/exercises/bug tracker/bug tracker exercise.ipynb
+++ b/exercises/bug tracker/bug tracker exercise.ipynb
@@ -12,31 +12,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c6d93f7",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:orange\">\n",
-    "\n",
-    "RESPCT framework:\n",
-    "- (R) Role: Better Semantic Relationships\n",
-    "- (E) Example: Additional context\n",
-    "- (S) Structure: Control input/output to structure\n",
-    "- (P) Pipeline: Break the mega prompt\n",
-    "- (C) Constraints: Limit the model\n",
-    "- (T) Task: Instructing the model what you want it to do\n",
-    "\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "25fb2dc4",
    "metadata": {},
    "source": [
     "## 🧩 Your Task\n",
     "\n",
-    "You’ll iteratively design prompts to power this assistant using the **RESPCT** framework.\n",
-    "\n",
+    "Build a command line app to help Triage Bug Reports using the RESPCT framework.\n",
+    "The app should communicate with an LLM to.\n",
+    " Use the beneficial templates and Workflow concepts to build that app.\n",
+    "1. Learn and plan what you intend to use and do with ask.\n",
+    "2. Define rules / instructions.\n",
+    "3. create a todo.md file.\n",
+    "4. create tests.\n",
+    "5. leverage stepwise CoT to own the code.\n",
+    "6. leverage context from the web or internal source code as you progress.\n",
+    "7. Jump ahead but if you get stuck, git discard and start over.\n",
     "---\n",
     "\n",
     "### ✅ Step-by-Step Instructions (One for Each RESPCT Letter)\n",
@@ -86,6 +76,14 @@
     "\n",
     "> _e.g., “Given a user-submitted bug report, triage it by extracting relevant information and recommending a fix.”_\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "acb8240049daf543"
   }
  ],
  "metadata": {
